--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -449,8 +449,11 @@ dd { margin: 0 0 0 20px; }
 /*  5. Images  --------------------------------------------------------- */
 
 img {
-   max-width: 100%;
-   height: auto;
+    max-width: 50%;
+    height: auto;
+}
+img.profile-pic:hover {
+    border: 4px solid crimson;
 }
 img.pull-right { margin: 12px 0px 0px 18px; }
 img.pull-left { margin: 12px 18px 0px 0px; }
