--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -454,6 +454,7 @@ img {
 }
 img.profile-pic:hover {
     border: 4px solid crimson;
+    border-radius: 5px;
 }
 img.pull-right { margin: 12px 0px 0px 18px; }
 img.pull-left { margin: 12px 18px 0px 0px; }
